# pyopenapi_gen

./: .bandit  .gitignore  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_problematic_model_content.py  LICENSE  LOGGING_CLEANUP_SUMMARY.md  Makefile  POST_PRODUCTION_SYNC_PLAN.md  README.md  TEST_COMPLIANCE_REVIEW.md  TEST_MAP.md  assignment.md  check_version.py  debug_generate.py  debug_project.py  debug_unified_service_usage.py  issue.md  models_emitter_constructor_debug.txt  models_emitter_init_debug.txt  models_emitter_init_py_generated_content.txt  postprocess_generated.py  pyproject.toml  summary_operation_ids.md  test_simple_self_ref.py  version_check.py
.cursor/rules/: architecture.mdc  coding-conventions.mdc  project-goal.mdc  testing.mdc
.github/: BRANCH_PROTECTION.md
.github/workflows/: auto-approve.yml  auto-merge.yml  ci.yml  claude-auto-approve.yml  claude-review-trigger.yml  claude.yml  dependabot-poetry-lock-fix.yml  main-checks.yml  pr-checks.yml  promote-to-staging.yml  pypi-publish.yml  semantic-release.yml  staging-publish.yml  testpypi-publish.yml
_process/: ARCHITECTURE.md  GENERATOR_FINDINGS.md  PLAN.md  TASKS.md  docstring_test_output.txt  docstring_test_report.md  project_structure.md
docs/: architecture.md  enhanced_cycle_detection.md  helpers.md  ir_model.md  ir_models.md  loader.md  unified_type_resolution.md
input/: business_swagger.json  validation_test_spec.json  validation_test_spec.yaml
output/business_client/: client.py
output_client/: client.py
output_client/endpoints/: __init__.py  agent_datasources.py  agents.py  analytics.py  authentication.py  chats.py  datasources.py  default.py  documents.py  embeddings.py  feedback.py  foundation_models.py  indices.py  jobs.py  listen.py  messages.py  search.py  system.py  tenants.py  users.py  vector_databases.py
output_client/models/: __init__.py  add_agent_data_source_request.py  add_agent_data_source_response.py  add_debug_message_request.py  add_debug_message_response.py  add_message_request.py  add_messages_request.py  agent.py  agent_config_response.py  agent_create.py  agent_history.py  agent_history_list_response.py  agent_list_response.py  agent_response.py  agent_status_enum.py  agent_summary.py  analytics_response.py  batch_index_response.py  change_password_request.py  chat.py  chat_create.py  chat_list_response.py  check_tenant_user_email_response.py  clean_document_request.py  clean_document_response.py  create_agent_response.py  create_datasource_response.py  create_document_response.py  create_embedding_request.py  create_embedding_response.py  create_foundation_model_request.py  create_foundation_model_response.py  create_tenant_job_response.py  create_tenant_response.py  create_tenant_user_response.py  create_user_response.py  data_source.py  data_source_create.py  data_source_create_interval_type_enum.py  data_source_create_type_enum.py  (+126 more)
output_minimal_client/: client.py
output_minimal_client/core/: config.py  exceptions.py  pagination.py
output_minimal_client/endpoints/: __init__.py  default.py
output_minimal_client/models/: __init__.py  get_union_response.py  simple_model.py
src/pyopenapi_gen/: __init__.py  __main__.py  cli.py  client_emitter.py  docs_emitter.py  endpoints_emitter.py  exceptions_emitter.py  http_transport.py  ir.py  loader.py  models_emitter.py  streaming_helpers.py  telemetry.py  utils.py  warning_collector.py
test_outputs/: mypy_business_swagger_errors.txt
tests/: test_auth_base.py  test_auth_plugins.py  test_cli_backup_diff.py  test_cli_edge_cases.py  test_cli_internal_utils.py  test_client_emitter.py  test_docs_cli.py  test_docs_emitter.py  test_end_to_end_business_swagger.py  test_end_to_end_petstore.py  test_endpoints_emitter.py  test_exceptions_emitter.py  test_exceptions_module.py  test_http_pagination_cli.py  test_init.py  test_ir.py  test_loader.py  test_loader_extensive.py  test_loader_invalid_refs.py  test_loader_malformed.py  test_loader_media_types.py  test_models_emitter.py  test_protocol_defaults.py  test_schema_parser.py  test_streaming_helpers.py  test_telemetry.py  test_telemetry_client.py  test_template_renderer.py  test_utils.py  test_utils_helpers.py  test_warning_collector.py
tests/auth/: test_auth_base.py  test_auth_plugins.py
tests/cli/: test_cli_backup_diff.py  test_cli_edge_cases.py  test_cli_edge_cases_comprehensive.py  test_cli_internal_utils.py  test_docs_cli.py  test_http_pagination_cli.py
tests/context/: test_file_manager.py  test_import_collector.py  test_render_context.py  test_render_context_imports.py  test_render_context_relative_paths.py
tests/core/: test_cattrs_converter_caching.py  test_cattrs_converter_complex_structures.py  test_cattrs_converter_e2e.py  test_cattrs_converter_field_access.py  test_cattrs_converter_toplevel_types.py  test_cattrs_converter_union.py  test_dataclass_serialization.py  test_edge_cases_integration.py  test_edge_cases_systematic.py  test_exceptions_module.py  test_forward_references.py  test_http_transport.py  test_ir.py  test_ir_schema.py  test_loader.py  test_loader_extensive.py  test_loader_invalid_refs.py  test_loader_malformed.py  test_loader_media_types.py  test_naming_strategy.py  test_pagination.py  test_parsing_context.py  test_postprocess_manager.py  test_schema_parser.py  test_schema_parser_specific_case.py  test_schemas.py  test_simple_self_ref_check.py  test_streaming_helpers.py  test_telemetry.py  test_telemetry_client.py  test_utils.py  test_warning_collector.py
tests/e2e/: test_no_response_unwrapping.py
tests/emitters/: test_client_emitter.py  test_config_emitter.py  test_docs_emitter.py  test_duplicate_operations.py  test_endpoints_emitter.py  test_exceptions_emitter.py  test_list_response_generation.py  test_models_emitter.py
tests/end_to_end/: test_dataclass_serialization_e2e.py
tests/examples/: test_developer_experience_demo.py
tests/generation/: test_external_core_package.py  test_init_py_issues.py  test_response_unwrapping.py
tests/generation_issues/: test_addmessage_like_issues.py  test_agent_include_parameter_typing.py  (+1 more)
(+368 files in other folders)
